--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -1,4 +1,10 @@
 
+@online{background,
+ title = {{$360^\circ$}-Bild einer kleinen Höhle},
+ url = {https://hdrihaven.com/hdri/?c=nature&h=small_cave},
+ urldate = {2020-05-20}
+}
+
 @online{NoMansSky,
  title = {No Man's Sky},
  url = {https://www.nomanssky.com/},
